# getjobber-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY_AND_TERMS.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
docs/: github-repo-settings.md  pypi-trusted-publisher-setup.md
src/getjobber_cli/: __init__.py  __main__.py  cli.py  constants.py
src/getjobber_cli/api/: client.py  mutations.py  queries.py
src/getjobber_cli/auth/: callback_server.py  oauth.py  token_manager.py
src/getjobber_cli/commands/: auth_commands.py  client_commands.py  config_commands.py  invoice_commands.py  job_commands.py  query_commands.py  quote_commands.py
src/getjobber_cli/utils/: config.py  errors.py  formatters.py  gating.py
tests/: conftest.py  test_config.py
tests/api/: test_client.py  test_mutations.py  test_queries.py  test_queries_schema.py
tests/auth/: test_callback_server.py  test_oauth.py  test_token_manager.py
tests/commands/: test_client_commands.py  test_invoice_commands.py  test_job_commands.py  test_quote_commands.py
tests/utils/: test_errors.py  test_formatters.py
