[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getjobber-cli"
version = "0.1.0"
description = "A portable CLI tool for accessing the GetJobber CRM GraphQL API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["getjobber", "cli", "crm", "graphql", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0",
    "gql[requests]>=3.4.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "requests-toolbelt>=1.0.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "responses>=0.23.0",
]

[project.scripts]
getjobber-cli = "getjobber_cli.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/getjobber-cli"
Documentation = "https://github.com/yourusername/getjobber-cli#readme"
Repository = "https://github.com/yourusername/getjobber-cli"
Issues = "https://github.com/yourusername/getjobber-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=getjobber_cli --cov-report=term-missing"
