[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getjobber-cli"
version = "1.1.1"
description = "A portable Python CLI for the Jobber GraphQL API — originally built by DC Tree Cutting and Land Service for internal automation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anthony Vincent Caracappa", email = "now@dctreecutting.com"},
    {name = "DC Tree Cutting and Land Service", email = "now@dctreecutting.com"},
]
maintainers = [
    {name = "Anthony Vincent Caracappa"},
]
keywords = ["getjobber", "cli", "crm", "graphql", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0",
    "gql[requests]>=3.4.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "requests-toolbelt>=1.0.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "responses>=0.23.0",
]

[project.scripts]
getjobber-cli = "getjobber_cli.cli:app"

[project.urls]
Homepage = "https://dctreecutting.com"
Author = "https://github.com/acaracappa"
Sponsor = "https://dctreecutting.com"
Repository = "https://github.com/acaracappa/getjobber-cli"
Documentation = "https://github.com/acaracappa/getjobber-cli#readme"
Issues = "https://github.com/acaracappa/getjobber-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=getjobber_cli --cov-report=term-missing"
